--- a/ansible/roles/centos7/opensearch/handlers/main.yml
+++ b/ansible/roles/centos7/opensearch/handlers/main.yml
@@ -1,10 +1,10 @@
 ---
-# handlers file for elasticsearch
+# handlers file for opensearch
 - name: reload systemd configuration
   become: yes
   command: systemctl daemon-reload
 
 # Restart service and ensure it is enabled
 
-- name: restart elasticsearch
-  systemd: name=elasticsearch state=restarted enabled=yes
+- name: restart opensearch
+  systemd: name=opensearch state=restarted enabled=yes
