--- a/ansible/roles/centos7/opensearch/templates/opensearch.yml
+++ b/ansible/roles/centos7/opensearch/templates/opensearch.yml
@@ -1,17 +1,9 @@
-cluster.name: "{{ elasticsearch_cluster_name }}"
+cluster.name: "{{ os_cluster_name }}"
 
 node.name: "{{ inventory_hostname }}"
-
-path.data: /var/lib/elasticsearch
-
-path.logs: /var/log/elasticsearch
 
 network.host: "{{ hostvars[inventory_hostname]['ip'] }}"
 
 http.port: 9200
 
-discovery.seed_hosts: ["{{ es_nodes }}"]
-
-cluster.initial_master_nodes: ["{{ es_master_nodes }}"]
-
-node.roles: [{{ hostvars[inventory_hostname]['roles'] }}]
+discovery.type: single-node
