--- a/ansible/inventories/opensearch/group_vars/all/all.yml
+++ b/ansible/inventories/opensearch/group_vars/all/all.yml
@@ -1,21 +1,27 @@
 ## Common opensearch configuration parameters ##
 
-opensearch_cluster_name: development-cluster
+os_cluster_name: development-cluster
 
-# Java memory heap values(GB) for opensearch
-# You can change it based on server specs
-xms_value: 2
-xmx_value: 2
+# opensearch download
+os_download_url: https://artifacts.opensearch.org/releases/bundle/opensearch
 
 # opensearch version
-es_version: "7.10.2"
-es_major_version: "7.x"
+os_version: "1.0.1"
 
 # Configure hostnames for opensearch nodes
 # It is required to configure SSL
 # Example es1.example.com, es2.example.com
 domain_name: example.com
 
-# dashboards version
-dashboards_version: "7.10.2"
-dashboards_major_version: "7.x"
+os_user: opensearch
+
+# Java memory heap values(GB) for opensearch
+# You can change it based on server specs
+xms_value: 2
+xmx_value: 2
+
+## Admin user credentials will be used for User & Roles management and cluster operations
+admin_password: Test@123
+
+## Kibana server credentials will be used internally by the Kibana server
+kibanaserver_password: Test@6789
