--- a/ansible/roles/centos7/opensearch/defaults/main.yml
+++ b/ansible/roles/centos7/opensearch/defaults/main.yml
@@ -12,6 +12,8 @@ os_master_nodes: |-
 
 populate_inventory_to_hosts_file: true
 
+os_home: /usr/share/opensearch
+os_conf_dir: /usr/share/opensearch/config
 os_plugin_bin_path: /usr/share/elasticsearch/bin/elasticsearch-plugin
 os_sec_plugin_conf_path: /usr/share/elasticsearch/plugins/opendistro_security/securityconfig
 os_sec_plugin_tools_path: /usr/share/elasticsearch/plugins/opendistro_security/tools
