create security configuration tasks

--- a/ansible/roles/centos7/opensearch/tasks/opensearch.yml
+++ b/ansible/roles/centos7/opensearch/tasks/opensearch.yml
@@ -43,6 +43,8 @@
     mode: 0644
     force: yes
 
-- name: Make sure elasticsearch is started
-  become: yes
-  service: name=elasticsearch state=started enabled=yes
+- name: OpenSearch Install | create systemd service
+  template:
+    src: opensearch.service
+    dest: /etc/systemd/system/opensearch.service
+    enabled: True
