--- a/ansible/roles/centos7/opensearch/tasks/security.yml
+++ b/ansible/roles/centos7/opensearch/tasks/security.yml
@@ -1,66 +1,55 @@
 ---
 
-- name: Security Plugin Install | Download Opendistro Elasticsearch security plugin {{ opendistro_security_plugin_version }}
-  get_url:
-    url: "{{ opendistro_plugin_url }}{{ opendistro_security_download_url }}opendistro-security-{{ opendistro_security_plugin_version }}.zip"
-    dest: "{{ es_home }}/opendistro-security-{{ opendistro_security_plugin_version }}.zip"
-  register: download
-
-- name: Security Plugin Install | Install the Opendistro security plugin
-  command: "{{ es_plugin_bin_path }} install -b file://{{ es_home }}/opendistro-security-{{ opendistro_security_plugin_version }}.zip"
-  when: download.changed
-  register: install
-
 ## Here we are going to use self-signed certificates for Transport (Node-Node communication) & REST API layer
 ## Using searchguard offline TLS tool to create node & root certificates
-- name: Security Plugin Install | Create local temporary directory for certificates generation
+- name: Security Plugin configuration | Create local temporary directory for certificates generation
   local_action:
     module: file
-    path: /tmp/opendistro-nodecerts
+    path: /tmp/opensearch-nodecerts
     state: directory
   run_once: true
-  when: install.changed
+  register: configuration
 
-- name: Security Plugin Install | Download certificates generation tool
+- name: Security Plugin configuration | Download certificates generation tool
   local_action:
     module: get_url
     url: https://search.maven.org/remotecontent?filepath=com/floragunn/search-guard-tlstool/1.5/search-guard-tlstool-1.5.zip
-    dest: /tmp/opendistro-nodecerts/search-guard-tlstool.zip
+    dest: /tmp/opensearch-nodecerts/search-guard-tlstool.zip
   run_once: true
-  when: install.changed
+  when: configuration.changed
 
-- name: Security Plugin Install | Extract the certificates generation tool
-  local_action: command chdir=/tmp/opendistro-nodecerts tar -xvf search-guard-tlstool.zip
+- name: Security Plugin configuration | Extract the certificates generation tool
+  local_action: command chdir=/tmp/opensearch-nodecerts tar -xvf search-guard-tlstool.zip
   run_once: true
-  when: install.changed
+  when: configuration.changed
 
-- name: Security Plugin Install | Make the executable file
+- name: Security Plugin configuration | Make the executable file
   local_action:
     module: file
-    dest: /tmp/opendistro-nodecerts/tools/sgtlstool.sh
+    dest: /tmp/opensearch-nodecerts/tools/sgtlstool.sh
     mode: a+x
   run_once: true
-  when: install.changed
+  when: configuration.changed
 
-- name: Security Plugin Install | Prepare the certificates generation template file
+- name: Security Plugin configuration | Prepare the certificates generation template file
   local_action:
     module: template
     src: tlsconfig.yml
-    dest: /tmp/opendistro-nodecerts/config/tlsconfig.yml
+    dest: /tmp/opensearch-nodecerts/config/tlsconfig.yml
   run_once: true
-  when: install.changed
+  when: configuration.changed
 
-- name: Security Plugin Install | Generate the node & admin certificates in local
+- name: Security Plugin configuration | Generate the node & admin certificates in local
   local_action:
-    module: command /tmp/opendistro-nodecerts/tools/sgtlstool.sh -c /tmp/opendistro-nodecerts/config/tlsconfig.yml -ca -crt -t /tmp/opendistro-nodecerts/config/
+    module: command /tmp/opensearch-nodecerts/tools/sgtlstool.sh -c /tmp/opensearch-nodecerts/config/tlsconfig.yml -ca -crt -t /tmp/opensearch-nodecerts/config/
   run_once: true
-  when: install.changed
+  when: configuration.changed
 
-- name: Security Plugin Install | Copy the node & admin certificates to Elasticsearch cluster
+- name: Security Plugin configuration | Copy the node & admin certificates to opensearch nodes
   copy:
-    src: "/tmp/opendistro-nodecerts/config/{{ item }}"
-    dest: /etc/elasticsearch/
-    mode: 0644
+    src: "/tmp/opensearch-nodecerts/config/{{ item }}"
+    dest: {{ os_conf_dir }}
+    mode: 0600
   with_items:
     - root-ca.pem
     - root-ca.key
@@ -68,69 +57,82 @@
     - "{{ inventory_hostname }}.pem"
     - "{{ inventory_hostname }}_http.key"
     - "{{ inventory_hostname }}_http.pem"
-    - "{{ inventory_hostname }}_elasticsearch_config_snippet.yml"
     - admin.key
     - admin.pem
-  when: install.changed
+  when: configuration.changed
 
-- name: Security Plugin Install | Copy the opendistro security configuration file 1 to cluster
+- name: Security Plugin configuration | Copy the security configuration file 1 to cluster
   blockinfile:
     block: "{{ lookup('template', 'templates/security_conf.yml') }}"
-    dest: "{{ conf_dir }}/elasticsearch.yml"
+    dest: "{{ os_conf_dir }}/opensearch.yml"
     backup: yes
     insertafter: EOF
-    marker: "## {mark} Opendistro Security common configuration ##"
+    marker: "## {mark} OpenSearch Security common configuration ##"
+  when: configuration.changed
 
-- name: Security Plugin Install | Copy the opendistro security configuration file 2 to cluster
+- name: Security Plugin configuration | Copy the security configuration file 2 to cluster
   blockinfile:
-    block: "{{ lookup('file', '/tmp/opendistro-nodecerts/config/{{ inventory_hostname }}_elasticsearch_config_snippet.yml') }}"
-    dest: "{{ conf_dir }}/elasticsearch.yml"
+    block: "{{ lookup('file', '/tmp/opensearch-nodecerts/config/{{ inventory_hostname }}_elasticsearch_config_snippet.yml') }}"
+    dest: "{{ os_conf_dir }}/opensearch.yml"
     backup: yes
     insertafter: EOF
-    marker: "## {mark} Opendistro Security Node & Admin certificates configuration ##"
-  when: install.changed
+    marker: "## {mark} opensearch Security Node & Admin certificates configuration ##"
+  when: configuration.changed
 
-- name: Security Plugin Install | Prepare the opendistro security configuration file
-  command: sed -i 's/searchguard/opendistro_security/g' {{ conf_dir }}/elasticsearch.yml
-  when: install.changed
+- name: Security Plugin configuration | Prepare the opensearch security configuration file
+  command: sed -i 's/searchguard/plugins.security/g' {{ os_conf_dir }}/opensearch.yml
+  when: configuration.changed
 
-- name: Security Plugin Install | Restart elasticsearch with security configuration
+- name: Security Plugin configuration | Set the file ownerships
+  file:
+    dest: {{ os_home }}
+    owner: { os_user }}
+    group: { os_user }}
+    recurse: yes
+
+- name: Security Plugin configuration | Set the folder permission
+  file:
+    dest: {{ os_conf_dir }}
+    owner: { os_user }}
+    group: { os_user }}
+    mode: 0700
+
+- name: Security Plugin configuration | Restart opensearch with security configuration
   systemd:
-    name: elasticsearch
+    name: opensearch
     state: restarted
     enabled: yes
-  when: install.changed
 
-- name: Security Plugin Install | Copy the opendistro security internal users template
+- name: Security Plugin configuration | Copy the opensearch security internal users template
   template:
     src: internal_users.yml
-    dest: "{{ es_sec_plugin_conf_path }}/internal_users.yml"
+    dest: "{{ os_sec_plugin_conf_path }}/internal_users.yml"
     mode: 0644
   run_once: true
-  when: install.changed
+  when: configuration.changed
 
-- name: Security Plugin Install | Set the Admin user password
+- name: Security Plugin configuration | Set the Admin user password
   shell: >
-    sed -i 's,{{ admin_password }},'$(sh {{ es_sec_plugin_tools_path }}/hash.sh -p {{ admin_password }} | tail -1)','
-    {{ es_sec_plugin_conf_path }}/internal_users.yml
+    sed -i 's,{{ admin_password }},'$(sh {{ os_sec_plugin_tools_path }}/hash.sh -p {{ admin_password }} | tail -1)','
+    {{ os_sec_plugin_conf_path }}/internal_users.yml
   run_once: true
-  when: install.changed
+  when: configuration.changed
 
-- name: Security Plugin Install | Set the kibanaserver user pasword
+- name: Security Plugin configuration | Set the kibanaserver user pasword
   shell: >
-    sed -i 's,{{ kibanaserver_password }},'$(sh {{ es_sec_plugin_tools_path }}/hash.sh -p {{ kibanaserver_password }} | tail -1)','
-    {{ es_sec_plugin_conf_path }}/internal_users.yml
+    sed -i 's,{{ kibanaserver_password }},'$(sh {{ os_sec_plugin_tools_path }}/hash.sh -p {{ kibanaserver_password }} | tail -1)','
+    {{ os_sec_plugin_conf_path }}/internal_users.yml
   run_once: true
-  when: install.changed
+  when: configuration.changed
 
-- name: Security Plugin Install | Initialize the opendistro security index in elasticsearch
+- name: Security Plugin configuration | Initialize the opensearch security index in opensearch
   shell: >
-    sh {{ es_sec_plugin_tools_path }}/securityadmin.sh
+    sh {{ os_sec_plugin_tools_path }}/securityadmin.sh
     -cacert {{ conf_dir }}/root-ca.pem
     -cert {{ conf_dir }}/admin.pem
     -key {{ conf_dir }}/admin.key
-    -cd {{ es_sec_plugin_conf_path }}/
+    -f {{ os_sec_plugin_conf_path }}/internal_users.yml
     -nhnv -icl
     -h {{ hostvars[inventory_hostname]['ip'] }}
   run_once: true
-  when: install.changed
+  when: configuration.changed
