--- a/ansible/roles/centos7/opensearch/templates/security_conf.yml
+++ b/ansible/roles/centos7/opensearch/templates/security_conf.yml
@@ -1,7 +1,6 @@
-{% if opendistro_security_install  %}
-opendistro_security.allow_default_init_securityindex: true
-opendistro_security.audit.type: internal_elasticsearch
-opendistro_security.enable_snapshot_restore_privilege: true
-opendistro_security.check_snapshot_restore_write_privileges: true
-opendistro_security.restapi.roles_enabled: ["all_access", "security_rest_api_access"]
-{% endif %}
+
+plugins.security.allow_default_init_securityindex: true
+plugins.security.audit.type: internal_opensearch
+plugins.security.enable_snapshot_restore_privilege: true
+plugins.security.check_snapshot_restore_write_privileges: true
+plugins.security.restapi.roles_enabled: ["all_access", "security_rest_api_access"]
