--- a/ansible/roles/centos7/opensearch/templates/tlsconfig.yml
+++ b/ansible/roles/centos7/opensearch/templates/tlsconfig.yml
@@ -1,6 +1,6 @@
 ca:
    root:
-      dn: CN=root.ca.example.com,OU=CA,O=example.com\, Inc.,DC=example.com
+      dn: CN=root.ca.{{ domain_name }},OU=CA,O={{ domain_name }}\, Inc.,DC={{ domain_name }}
       keysize: 2048
       validityDays: 730
       pkPassword: none
@@ -25,10 +25,12 @@ defaults:
 # Specify the nodes of your ES cluster here
 #
 nodes:
-  - name: node-1
-    dn: CN=node-1.example.com,OU=Ops,O=example.com\, Inc.,DC=example.com
-    dns: node-1.example.com
-    ip: 10.0.10.41
+{% for item in groups['os-cluster'] %}
+  - name: {{ item }}
+    dn: CN={{ item }}.{{ domain_name }},OU=Ops,O={{ domain_name }}\, Inc.,DC={{ domain_name }}
+    dns: {{ item }}.{{ domain_name }}
+    ip: {{ hostvars[item]['ip'] }}
+{% endfor %}
 
 ###
 ### Clients
@@ -41,5 +43,5 @@ nodes:
 #
 clients:
   - name: admin
-    dn: CN=admin.example.com,OU=Ops,O=example.com\, Inc.,DC=example.com
+    dn: CN=admin.{{ domain_name }},OU=Ops,O={{ domain_name }}\, Inc.,DC={{ domain_name }}
     admin: true
