--- a/ansible/roles/centos7/dashboards/defaults/main.yml
+++ b/ansible/roles/centos7/dashboards/defaults/main.yml
@@ -11,7 +11,7 @@ os_conf_dir: /usr/share/opensearch-dashboards/config
 os_plugin_bin_path: /usr/share/opensearch-dashboards/bin/opensearch-dashboards-plugin
 
 os_api_port: 9200
-es_nodes_dashboards: |-
+os_nodes_dashboards: |-
         {% for item in groups['os-cluster'] -%}
           https://{{ hostvars[item]['ip'] }}:{{ os_api_port }}{% if not loop.last %}","{% endif %}
         {%- endfor %}
