--- a/ansible/roles/centos7/opensearch/tasks/opensearch.yml
+++ b/ansible/roles/centos7/opensearch/tasks/opensearch.yml
@@ -46,4 +46,4 @@
 - name: OpenSearch Install | create systemd service
   template:
     src: opensearch.service
-    dest: /etc/systemd/system/opensearch.service
+    dest: "{{ systemctl_path }}/opensearch.service"
