--- a/ansible/roles/centos7/dashboards/templates/opensearch_dashboards.yml
+++ b/ansible/roles/centos7/dashboards/templates/opensearch_dashboards.yml
@@ -9,5 +9,5 @@ opensearch.requestHeadersWhitelist: [ authorization,securitytenant ]
 opensearch_security.multitenancy.enabled: true
 opensearch_security.multitenancy.tenants.preferred: ["Private", "Global"]
 opensearch_security.readonly_mode.roles: ["kibana_read_only"]
-# Use this setting if you are running kibana without https
+# Use this setting if you are running dashboards without https
 opensearch_security.cookie.secure: false
