--- a/ansible/roles/centos7/dashboards/vars/main.yml
+++ b/ansible/roles/centos7/dashboards/vars/main.yml
@@ -1,7 +1,3 @@
 ---
-# vars file for elasticsearch
+# vars file for opensearch
 java: "{{ es_java | default('java-1.8.0-openjdk.x86_64') }}"
-
-
-kibana_repo_name: "{{ kibana_major_version }}"
-kibana_repo_url: https://artifacts.elastic.co/packages/oss-{{ kibana_major_version }}/yum
