--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "docs"]
-      path = helm-charts
-      url = https://github.com/opensearch-project/helm-charts
-      branch = main
+
+[submodule "helm-charts"]
+	path = helm-charts
+	url = https://github.com/opensearch-project/helm-charts
