add pointer for ansible-playbook
Signed-off-by: saravanan palanisamy <saravanan30erd@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 [submodule "helm-charts"]
 	path = helm-charts
 	url = https://github.com/opensearch-project/helm-charts
+
+[submodule "ansible-playbook"]
+	path = ansible-playbook
+	url = https://github.com/opensearch-project/ansible-playbook
