--- a/.github/workflows/deploy-nightly-playground.yml
+++ b/.github/workflows/deploy-nightly-playground.yml
@@ -15,28 +15,20 @@ jobs:
     outputs:
       OPENSEARCH_URL: ${{ steps.set-env.outputs.OPENSEARCH_URL }}
       OPENSEARCH_DASHBOARDS_URL: ${{ steps.set-env.outputs.OPENSEARCH_DASHBOARDS_URL }}
-      OPENSEARCH_BUILD_ID: ${{ steps.set-env.outputs.OPENSEARCH_BUILD_ID }}
-      OPENSEARCH_DASHBOARDS_BUILD_ID: ${{ steps.set-env.outputs.OPENSEARCH_DASHBOARD_BUILD_ID }}
       OPENSEARCH_DIST_MANIFEST_URL: ${{ steps.set-env.outputs.OPENSEARCH_DIST_MANIFEST_URL }}
       OPENSEARCH_DASHBOARDS_DIST_MANIFEST_URL: ${{ steps.set-env.outputs.OPENSEARCH_DASHBOARDS_DIST_MANIFEST_URL }}
     steps:
       - name: Set Env variables
         id: set-env
         run: |
-          opensearch_url_latest=https://ci.opensearch.org/ci/dbc/distribution-build-opensearch/${DIST_VERSION}/latest/linux/x64/tar/dist/opensearch/opensearch-${DIST_VERSION}-linux-x64.tar.gz
-          opensearch_dashboards_url_latest=https://ci.opensearch.org/ci/dbc/distribution-build-opensearch-dashboards/${DIST_VERSION}/latest/linux/x64/tar/dist/opensearch-dashboards/opensearch-dashboards-${DIST_VERSION}-linux-x64.tar.gz
-          
           wget https://ci.opensearch.org/ci/dbc/distribution-build-opensearch/${DIST_VERSION}/latest/linux/x64/tar/dist/opensearch/manifest.yml -O opensearch.yml
           wget https://ci.opensearch.org/ci/dbc/distribution-build-opensearch-dashboards/${DIST_VERSION}/latest/linux/x64/tar/dist/opensearch-dashboards/manifest.yml -O dashboards.yml
 
           opensearch_build_id=$(yq .build.id opensearch.yml)
           dashboards_build_id=$(yq .build.id dashboards.yml)
 
-          echo "OPENSEARCH_BUILD_ID=${opensearch_build_id}" >> "$GITHUB_OUTPUT"
-          echo "OPENSEARCH_DASHBOARD_BUILD_ID=${dashboard_build_id}" >> "$GITHUB_OUTPUT"
-
-          echo "OPENSEARCH_URL=https://ci.opensearch.org/ci/dbc/distribution-build-opensearch/${DIST_VERSION}/$opensearch_build_id/linux/x64/tar/dist/opensearch/opensearch-${DIST_VERSION}-linux-x64.tar.gz" >> "$GITHUB_OUTPUT"
-          echo "OPENSEARCH_DASHBOARDS_URL=https://ci.opensearch.org/ci/dbc/distribution-build-opensearch-dashboards/${DIST_VERSION}/$dashboards_build_id/linux/x64/tar/dist/opensearch-dashboards/opensearch-dashboards-${DIST_VERSION}-linux-x64.tar.gz" >> "$GITHUB_OUTPUT"
+          echo "OPENSEARCH_URL=$(yq .build.location opensearch.yml)" >> "$GITHUB_OUTPUT"
+          echo "OPENSEARCH_DASHBOARDS_URL=$(yq .build.location dashboards.yml)" >> "$GITHUB_OUTPUT"
 
           echo "OPENSEARCH_DIST_MANIFEST_URL=https://ci.opensearch.org/ci/dbc/distribution-build-opensearch/${DIST_VERSION}/$opensearch_build_id/linux/x64/tar/dist/opensearch/manifest.yml" >> "$GITHUB_OUTPUT"
           echo "OPENSEARCH_DASHBOARDS_DIST_MANIFEST_URL=https://ci.opensearch.org/ci/dbc/distribution-build-opensearch-dashboards/${DIST_VERSION}/$dashboards_build_id/linux/x64/tar/dist/opensearch-dashboards/manifest.yml" >> "$GITHUB_OUTPUT"
