--- a/.github/workflows/index-data.yml
+++ b/.github/workflows/index-data.yml
@@ -33,6 +33,6 @@ jobs:
           yq -o=json '.' opensearch.yml > opensearch.json
           yq -o=json '.' opensearch-dashboards.yml > dashboards.json
 
-          curl -X POST "https://${{inputs.endpoint}}/opensearch/_doc/1" -H "Content-Type: application/json" -d @opensearch.json -u ${{ secrets.opensearch-user }}:${{ secrets.opensearch-password }} --insecure
+          curl -X POST "https://${{inputs.endpoint}}:8443/opensearch/_doc/1" -H "Content-Type: application/json" -d @opensearch.json -u ${{ secrets.opensearch-user }}:${{ secrets.opensearch-password }} --insecure
 
-          curl -X POST "https://${{inputs.endpoint}}/opensearch-dashboards/_doc/1" -H "Content-Type: application/json" -d @dashboards.json -u ${{ secrets.opensearch-user }}:${{ secrets.opensearch-password }} --insecure
+          curl -X POST "https://${{inputs.endpoint}}:8443/opensearch-dashboards/_doc/1" -H "Content-Type: application/json" -d @dashboards.json -u ${{ secrets.opensearch-user }}:${{ secrets.opensearch-password }} --insecure
