--- a/.github/workflows/nightly-playground-trigger.yml
+++ b/.github/workflows/nightly-playground-trigger.yml
@@ -15,8 +15,22 @@ jobs:
       dist_version: ${{ matrix.dist_version }}
 
   update-ngnix-config:
+    runs-on: ubuntu-latest
     needs: deploy-nightly-playground
-    uses: opensearch-project/opensearch-devops/.github/workflows/nightly-playground-ngnix.yml@main
-    with:
-      endpoint_2x: ${{ needs.deploy-nightly-playground.outputs.endpoint_2x }}
-      endpoint_3x: ${{ needs.deploy-nightly-playground.outputs.endpoint_3x }}
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: aws-actions/configure-aws-credentials@v4.0.2
+        with:
+          role-to-assume: ${{ secrets.DEPLOY_NIGHTLY_PLAYGROUND_ROLE }}
+          aws-region: us-west-2
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 16.x
+
+      - name: Deploy routing stack
+        working-directory: nightly-playground
+        run: |
+          npm install
+          npm run cdk deploy "ngnixBased*" -- -c playgroundId=3x -c distVersion="3.0.0" -c distributionUrl="someUrl" -c dashboardsUrl="someUrl" -c dashboardPassword="somePassword" -c adminPassword="somePassword" -c endpoint2x=${{needs.deploy-nightly-playground.outputs.endpoint_2x}} -c endpoint3x=${{needs.deploy-nightly-playground.outputs.endpoint_3x}} --require-approval never
