--- a/.github/workflows/nightly-playground-trigger.yml
+++ b/.github/workflows/nightly-playground-trigger.yml
@@ -11,10 +11,14 @@ jobs:
       matrix:
         dist_version: ['2.13.0', '3.0.0']
     uses: opensearch-project/opensearch-devops/.github/workflows/nightly-playground-deploy.yml@main
+    secrets: inherit
     with:
       dist_version: ${{ matrix.dist_version }}
 
   update-ngnix-config:
+    permissions:
+      id-token: write
+      contents: read
     runs-on: ubuntu-latest
     needs: deploy-nightly-playground
     steps:
@@ -33,4 +37,4 @@ jobs:
         working-directory: nightly-playground
         run: |
           npm install
-          npm run cdk deploy "ngnixBased*" -- -c playgroundId=3x -c distVersion="3.0.0" -c distributionUrl="someUrl" -c dashboardsUrl="someUrl" -c dashboardPassword="somePassword" -c adminPassword="somePassword" -c endpoint2x=${{needs.deploy-nightly-playground.outputs.endpoint_2x}} -c endpoint3x=${{needs.deploy-nightly-playground.outputs.endpoint_3x}} --require-approval never
+          npm run cdk deploy "ngnixBased*" -- -c playGroundId=3x -c distVersion="3.0.0" -c distributionUrl="someUrl" -c dashboardsUrl="someUrl" -c dashboardPassword="somePassword" -c adminPassword="somePassword" -c endpoint2x=${{needs.deploy-nightly-playground.outputs.endpoint_2x}} -c endpoint3x=${{needs.deploy-nightly-playground.outputs.endpoint_3x}} --require-approval never
