--- a/.github/workflows/nightly-playground-trigger.yml
+++ b/.github/workflows/nightly-playground-trigger.yml
@@ -9,7 +9,8 @@ jobs:
   deploy-nightly-playground:
     strategy:
       matrix:
-        dist_version: ['2.14.0', '3.0.0']
+        dist_version: ['2.13.0', '3.0.0']
+      fail-fast: false
     uses: opensearch-project/opensearch-devops/.github/workflows/nightly-playground-deploy.yml@main
     secrets: inherit
     with:
