--- a/.github/workflows/nightly-playground-trigger.yml
+++ b/.github/workflows/nightly-playground-trigger.yml
@@ -10,7 +10,8 @@ jobs:
     strategy:
       matrix:
         dist_version: ['2.14.0', '3.0.0']
-    uses: opensearch-project/opensearch-devops/.github/workflows/nightly-playground-deploy.yml@main
+      fail-fast: false
+    uses: ./.github/workflows/nightly-playground-deploy.yml
     secrets: inherit
     with:
       dist_version: ${{ matrix.dist_version }}
