--- a/.github/workflows/nightly-playground-deploy.yml
+++ b/.github/workflows/nightly-playground-deploy.yml
@@ -133,25 +133,30 @@ jobs:
               echo "dist_version does not belong to 2x or 3x"
           fi
 
-  register-snapshot-repo-enable-alerts:
+  configure-alerts-notifications:
     needs: validate-and-deploy
     runs-on: ubuntu-latest
     steps:
-      - name: Register snapshot repo
+      - name: Create notification channel
         run : |
-          curl -XPUT -f "https://${{needs.validate-and-deploy.outputs.ENDPOINT}}:8443/_snapshot/snapshots-repo" -H 'Content-Type: application/json' -d'
+          curl -XPOST -f "https://${{needs.validate-and-deploy.outputs.ENDPOINT}}:8443/_plugins/_notifications/configs" -H 'Content-Type: application/json' -d'
           {
-            "type": "s3",
-            "settings": {
-              "bucket": "nightly-playgrounds-snapshots-bucket",
-              "region": "us-west-2",
-              "base_path": "${{needs.validate-and-deploy.outputs.PLAYGROUND_ID}}"
-            }
-          }' -u ${{ secrets.OPENSEARCH_USER }}:${{ secrets.OPENSEARCH_PASSWORD }} --insecure
-      - name: Restore altering configs
+            "config_id": "slack-notification-channel",
+            "name": "slack-notification-channel",
+            "config": {
+              "name": "slack-notification-channel",
+              "description": "Slack notification channel for monitoring alerts",
+              "config_type": "webhook",
+              "is_enabled": true,
+              "webhook": {
+                "url": "${{ secrets.SLACK_WEBHOOK }}"
+                }
+              }
+            }' -u ${{ secrets.OPENSEARCH_USER }}:${{ secrets.OPENSEARCH_PASSWORD }} --insecure
+            
+      - name: Configure monitors
         run: |
-          curl -XPOST "https://${{needs.validate-and-deploy.outputs.ENDPOINT}}:8443/_snapshot/snapshots-repo/alerts-config/_restore" -H 'Content-Type: application/json' -d'
-          {
-            "indices": ".opendistro-alerting-config,.opensearch-notifications-config",
-            "ignore_unavailable": false,
-          }' -u ${{ secrets.OPENSEARCH_USER }}:${{ secrets.OPENSEARCH_PASSWORD }} --insecure
+          for config in `ls nightly-playground/resources/monitors-config/`;
+          do curl -XPOST "https://${{needs.validate-and-deploy.outputs.ENDPOINT}}:8443/_plugins/_alerting/monitors" -H 'Content-Type: application/json' -d @nightly-playground/resources/monitors-config/$config -u ${{ secrets.OPENSEARCH_USER }}:${{ secrets.OPENSEARCH_PASSWORD }} --insecure;
+          done
+          
